tests/ui/type-alias-impl-trait/match-upvar-discriminant-of-opaque.stderr
error[E0720]: cannot resolve opaque type
  --> $DIR/match-upvar-discriminant-of-opaque.rs:7:9
   |
LL |         None => (),
   |         ^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0720`.
